syntax="proto3";
option go_package = "/user;";

message UserResp {
	int64 user_id = 1;
	string user_name = 2;
	string nick_name = 3;
}

message UserRegisterReq {
	string nick_name = 1;
	string user_name = 2;
	string password = 3;
	string password_confirm = 4;
}

message UserLoginReq {
	string user_name = 1;
	string password = 2;
}

message UserDetailResponse {
	int64 Code=1;
	UserResp UserDetail=2;
}

message UserCommonResponse {
	int64 code = 1;
	string msg = 2;
	string data = 3;
	string error = 4;
}

service UserService{
	rpc UserLogin(UserLoginReq) returns(UserDetailResponse);
	rpc UserRegister(UserRegisterReq) returns(UserCommonResponse);
}
